src/parser/snapshots/raoul__parser__tests__invalid_file.snap
---
source: src/parser/tests.rs
expression: res.unwrap_err()
---
 --> 1:1
  |
1 | fn myFunction(v: integer): void {␊
  | ^---
  |
  = expected function
