src/parser/snapshots/raoul__parser__tests__valid_files-10.snap
---
source: src/parser/tests.rs
expression: res.unwrap()
---
Main(([], [
    Write([String(Array 'a')]),
    Assignment(false, Id(a), Array([Integer(1), Integer(2), Integer(3)])),
    For(BinaryOperation(Lte, Id(i), Integer(2)), [Write([ArrayDeclaration(a, Id(i), None)])], Assignment(false, Id(i), Integer(0))),
    Write([String(Array 'b')]),
    Assignment(false, Id(b), Array([Array([Integer(1), Integer(2), Integer(3)]), Array([Integer(1), Integer(2), Integer(3)])])),
    For(BinaryOperation(Lte, Id(i), Integer(1)), [For(BinaryOperation(Lte, Id(j), Integer(2)), [Write([ArrayDeclaration(b, Id(i), Some(Id(j)))])], Assignment(false, Id(j), Integer(0)))], Assignment(false, Id(i), Integer(0))),
    Write([String(Array 'c')]),
    Assignment(false, Id(c), ArrayDeclaration(INT, 3, None)),
    For(BinaryOperation(Lte, Id(i), Integer(2)), [Assignment(false, ArrayDeclaration(c, Id(i), None), Id(i)), Write([ArrayDeclaration(c, Id(i), None)])], Assignment(false, Id(i), Integer(0))),
    Write([String(Array 'd')]),
    Assignment(false, Id(d), ArrayDeclaration(INT, 2, Some(2))),
    For(BinaryOperation(Lte, Id(i), Integer(1)), [For(BinaryOperation(Lte, Id(j), Integer(1)), [Assignment(false, ArrayDeclaration(d, Id(i), Some(Id(j))), BinaryOperation(Sum, BinaryOperation(Times, Id(i), Integer(2)), Id(j))), Write([ArrayDeclaration(d, Id(i), Some(Id(j)))])], Assignment(false, Id(j), Integer(0)))], Assignment(false, Id(i), Integer(0))),
]))
