src/parser/snapshots/raoul__parser__tests__valid_files-11.snap
---
source: src/parser/tests.rs
expression: res.unwrap()
---
Main(([], [
    Write([String(Hello world!)]),
]))
