src/parser/snapshots/raoul__parser__tests__valid_files-12.snap
---
source: src/parser/tests.rs
expression: res.unwrap()
---
Main(([
    Function(my_function, VOID, [], [
        Assignment(false, Id(b), Integer(2)),
    ]),
], [
    Assignment(false, Id(a), Integer(1)),
    Assignment(true, Id(c), Integer(2)),
    Assignment(false, Id(a), Integer(2)),
    Assignment(false, Id(b), Integer(1)),
    Write([Id(a), Id(c)]),
]))
