src/parser/snapshots/raoul__parser__tests__valid_files-4.snap
---
source: src/parser/tests.rs
expression: res.unwrap()
---
Main(([
    Function(test, VOID, [], [
        Assignment(false, Id(a), Integer(1)),
    ]),
    Function(test2, INT, [Argument(INT, a)], [
        Return(Id(a)),
    ]),
], [
    FunctionCall(test, []),
    Assignment(false, Id(a), FunctionCall(test2, [Integer(2)])),
    Write([Id(a)]),
]))
