src/parser/snapshots/raoul__parser__tests__valid_files-6.snap
---
source: src/parser/tests.rs
expression: res.unwrap()
---
Main(([
    Function(test, INT, [], [
        Assignment(false, Id(a), Integer(1)),
        While(BinaryOperation(Lt, Id(a), Integer(10)), [Write([Id(a)]), Assignment(false, Id(a), BinaryOperation(Sum, Id(a), Integer(1)))]),
        Return(Id(a)),
    ]),
], [
    Write([FunctionCall(test, [])]),
]))
