src/parser/snapshots/raoul__parser__tests__valid_files-7.snap
---
source: src/parser/tests.rs
expression: res.unwrap()
---
Main(([], [
    Assignment(false, Id(a), Read),
    Write([Id(a)]),
]))
